--- a/style.css
+++ b/style.css
@@ -65,3 +65,25 @@ body {
   color: #777;
   margin-top: 20px;
 }
+.note a {
+  color: #d8006c;
+  text-decoration: none;
+}
+
+.form-area {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.form-area input[type="password"] {
+  padding: 10px;
+  width: 80%;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  text-align: center;
+}
+.form-area input[type="password"]:focus {
+  border-color: #d8006c;
+  outline: none;
+}
